--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/*Landing*/
+.writeout {
+  height: 600px;
+  width: 1000px;
+  /* position: absolute; */
+  background-image: url("./assets/black.JPG");
+  background-size: cover;
+  max-width: 90%;
+  border: dashed;
+  border-color: white;
+  /* for when fades back to this version on state update */
+  transition: 10s ease-in-out;
+  transform-origin: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.emptywriteout {
+  height: 600px;
+  width: 1000px;
+  background-image: url("./assets/purple_flowers.jpg");
+  background-size: cover;
+  max-width: 90%;
+  border: dashed;
+  border-color: white;
+  transition: 10s ease-in-out;
+  transform-origin: center;
+}
+
+.writeout_btn {
+  background-color: rgb(237, 168, 58);
+  font-size: 1.5rem;
+  color: black;
+  text-shadow: 1px 1px rgb(219, 57, 3);
+  border-color:rgb(219, 57, 3);
+  border-radius: 30px;
+  padding: 5px 60px;
+}
+
+.writeout_btn:hover {
+  background-color:rgb(255, 221, 165)
 }
