--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Special+Elite&display=swap');
+/*font-family: 'DotGothic16', sans-serif;
+font-family: 'Special Elite', cursive;*/
+
 .App {
   text-align: center;
   color: white;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center; */
 }
 
-/*Landing*/
-.writeout {
-  height: 600px;
-  width: 1000px;
-  /* position: absolute; */
-  background-image: url("./assets/black.JPG");
-  background-size: cover;
-  max-width: 90%;
-  border: dashed;
-  border-color: white;
-  /* for when fades back to this version on state update */
-  transition: 10s ease-in-out;
-  transform-origin: center;
+/******************************************Landing Page*********/
+h1 {
+  margin-top: 12rem;
+  font-size: 5rem;
+  font-family: 'DotGothic16', sans-serif;
+  z-index: 9999;
 }
 
-.emptywriteout {
-  height: 600px;
-  width: 1000px;
-  background-image: url("./assets/purple_flowers.jpg");
-  background-size: cover;
-  max-width: 90%;
-  border: dashed;
-  border-color: white;
-  transition: 10s ease-in-out;
-  transform-origin: center;
-}
-
-.writeout_btn {
-  background-color: rgb(237, 168, 58);
-  font-size: 1.5rem;
-  color: black;
-  text-shadow: 1px 1px rgb(219, 57, 3);
-  border-color:rgb(219, 57, 3);
-  border-radius: 30px;
-  padding: 5px 60px;
-}
-
-.writeout_btn:hover {
-  background-color:rgb(255, 221, 165)
+.red {
+  background: none;
+  color: red;
 }
