installed React Router. started About page. trying to put button on Landing page but timer seems to make it jump and also button background isn't transparent

--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,14 @@ h1 {
   background: none;
   color: red;
 }
+
+
+/*****************************************About Page**********/
+.about-container {
+  background-image: url("./assets/cafeteria.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover; 
+  height: 100vh;
+  margin-top: 0;
+}
