--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,15 @@ h1 {
   color: red;
 }
 
+.start-button {
+  background-color: black;
+}
+
+.start-button-img {
+  background-color: black;
+  margin: -5px;
+  /* margin-right: -50px; */
+}
 
 /*****************************************About Page**********/
 .about-container {
