--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ font-family: 'Special Elite', cursive;*/
 
 /******************************************Landing Page*********/
 h1 {
-  margin-top: 12rem;
+  margin-top: 10rem;
   font-size: 5rem;
   font-family: 'DotGothic16', sans-serif;
   z-index: 9999;
@@ -35,11 +35,102 @@ h1 {
 }
 
 /*****************************************About Page**********/
+
+
 .about-container {
+  /*position: relative;*/
+
+  height: 100vh;
   background-image: url("./assets/cafeteria.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: cover; 
-  height: 100vh;
+  background-size: cover;
+  background-position: center; 
   margin-top: 0;
+  /* display: flex;
+  flex-direction: column;
+  align-content: center;
+  text-align: center; */
+  z-index: -1;
+}
+
+/* .about-container::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background-color: rgba(0,0,0,0.1);
+} */
+
+
+.all-about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.portrait {
+  width: 9rem;
+  height: auto;
+  border: 6px solid rgb(27, 27, 31);
+  border-radius: 10px;
+  margin-top: 2rem;
+}
+
+.tagline {
+  color: black;
+  font-size: 1.8rem;
+  text-shadow: 2px 2px 2px lightskyblue;
+  background: rgba(255,255,255,0.8);
+  padding: .5rem;
+  width: 28rem;
+  border-radius: 20px;
+  margin-top: .5rem;
+}
+
+.about-p {
+  margin-top: 5.5rem;
+  background: rgba(255,255,255,0.8);
+  width: 34rem;
+  padding: 1rem;
+  border-radius: 20px;
+  color: black;
+  text-shadow: 1px 1px 1px lightskyblue;
+}
+
+
+
+/* .about-text {
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  background: rgba(0,0,0,0.5);
+  width: 35rem;
+  padding: 1rem;
+  margin-top: 1rem;
+  border-radius: 20px;
+} */
+
+.socials {
+  display: flex;
+  flex-direction: row;
+  margin-top: 6rem;
+  width: 8rem;
+  justify-content: space-around;
+  padding: .5rem;
+  background-color: rgba(255,255,255,0.5);
+  border-radius: 20px;
+}
+
+.linkedin {
+  width: 40px;
+  height: auto;
+}
+
+.github {
+  width: 40px;
+  height: auto;
 }
