--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
 /*font-family: 'DotGothic16', sans-serif;
 font-family: 'Special Elite', cursive;*/
 
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Loved+by+the+King&display=swap');
+/* font-family: 'Amatic SC', cursive;
+font-family: 'Loved by the King', cursive; */
+
 .App {
   text-align: center;
   color: white;
@@ -83,6 +87,9 @@ h1 {
 }
 
 .tagline {
+  /* font-family: 'Amatic SC', cursive;
+  font-weight: 700;
+  /* font-size: 2rem; */
   color: black;
   font-size: 1.8rem;
   text-shadow: 2px 2px 2px lightskyblue;
@@ -94,6 +101,9 @@ h1 {
 }
 
 .about-p {
+  /* font-family: 'Amatic SC', cursive;
+  font-weight: 700;
+  font-size: 1.5rem; */
   margin-top: 5.5rem;
   background: rgba(255,255,255,0.8);
   width: 34rem;
@@ -141,9 +151,9 @@ h1 {
   position: absolute;
   right: 0;
   bottom: 0;
-  margin-right: 0;
-  margin-bottom: 0;
-  width: 250px;
+  margin-right: 2.5rem;
+  margin-bottom: 2.5rem;
+  width: 125px;
   height: auto;
 }
 
@@ -175,6 +185,34 @@ h1 {
   font-size: 3rem;
 }
 
+.homepage-link:hover {
+  color: red;
+  text-shadow: 2px 2px 2px rgb(255, 157, 157, 0.3);
+  text-decoration: none;
+  font-size: 3rem;
+}
+
+.landing-link {
+  color: white;
+  font-family: 'DotGothic16', sans-serif;
+  font-size: 1rem;
+  position: absolute;
+  bottom: 0;
+  left: 32%;
+  margin-bottom: 1rem;
+  letter-spacing: .05rem;
+}
+
+.landing-link:hover {
+  color: red;
+  font-family: 'DotGothic16', sans-serif;
+  font-size: 1rem;
+  position: absolute;
+  bottom: 0;
+  left: 32%;
+  margin-bottom: 1rem;
+  letter-spacing: .05rem;
+}
 
 /******************************************Projects and Tech********/
 
@@ -187,4 +225,104 @@ h1 {
   background-position: center; 
   margin-top: 0;
   z-index: -1;
+}
+
+.techandproj-container {
+  display: flex;
+}
+
+.tech-container {
+  display: flex;
+}
+
+.tech {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  /* background-color: rgba(255,255,255,0.5); */
+  margin-top: 5rem;
+  margin-left: 4rem;
+}
+
+.tech-title {
+  color: white;
+  font-family: 'Amatic SC', cursive;
+  font-size: 3rem;
+  font-weight: 700;
+  /* margin-bottom: .5rem; */
+  text-shadow: 2px 2px 2px black;
+}
+
+.tech-list {
+    list-style-type: none;
+    margin: 0;
+    padding: .5rem;
+}
+
+.tech-item {
+  color: white;
+  font-family: 'Amatic SC', cursive;
+  font-size: 1.5rem;
+  font-weight: 700;
+  /* margin-bottom: 1rem; */
+  text-shadow: 1px 1px 1px black;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin-left: 17.5rem;
+  background-color: rgba(0,0,0,0.9);
+  padding: 1.5rem;
+}
+
+.projects-title {
+  color: white;
+  margin-top: 1rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.project-title {
+  color: white;
+  font-family: 'Amatic SC', cursive;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+.iam-notok {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: center;
+}
+
+.notok {
+  width: 40rem;
+  height: auto;
+  border: 4px solid white;
+  border-radius: 20px;
+  margin-bottom: 1rem;
+}
+
+.project-p {
+  max-width: 36rem;
+  color: white;
+  font-size: 1.1rem;
+}
+
+.project-link {
+  text-decoration: none;
+  color: white;
+  text-shadow: 1px 1px 1px red;
+  font-weight: bold;
+}
+
+.project-link:hover {
+  text-decoration: none;
+  color: red;
+  text-shadow: 1px 1px 1px white;
+  font-weight: bolder;
 }
