--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,12 @@ font-family: 'Loved by the King', cursive; */
 }
 
 /******************************************Landing Page*********/
+.landing_content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 h1 {
   margin-top: 10rem;
   font-size: 5rem;
